2012-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-timer--function): New function.

	* gnus-art.el (gnus-article-stop-animations): Use it.

2012-09-13  Paul Eggert  <eggert@cs.ucla.edu>

	Fix glitches caused by addition of psec to timers.
	* gnus-art.el (gnus-article-stop-animations): Use timer--function
	rather than raw access to timer vector.

2012-09-11  Julien Danjou  <julien@danjou.info>

	* gnus-notifications.el (gnus-notifications): Check for nil values in
	ignored addresses check.

2012-09-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* qp.el (quoted-printable-decode-region): Inline+CSE+strength-reduction.

2012-09-07  Chong Yidong  <cyd@gnu.org>

	* gnus-util.el
	(gnus-put-text-property-excluding-characters-with-faces): Restore.

	* gnus-salt.el (gnus-tree-highlight-node):
	* gnus-sum.el (gnus-summary-highlight-line):
	* gnus-group.el (gnus-group-highlight-line): Revert use of add-face.

2012-09-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-util.el: Fix compilation error on XEmacs 21.4.

2012-09-06  Juri Linkov  <juri@jurta.org>

	* gnus-group.el (gnus-read-ephemeral-gmane-group): Change the naming
	scheme for buffer names to be more consistent with other group and
	article buffer names in Gnus.

2012-09-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-util.el
	(gnus-put-text-property-excluding-characters-with-faces): Removed.

	* gnus-compat.el: Define compat function `add-face' from Wolfgang
	Jenkner.

	* gnus-group.el (gnus-group-highlight-line): Use combining faces.

	* gnus-sum.el (gnus-summary-highlight-line): Ditto.

	* gnus-salt.el (gnus-tree-highlight-node): Ditto.

2012-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-score.el (gnus-score-decode-text-parts): Use #' for
	mm-text-parts used in labels macro to make it work with XEmacs 21.5.

	* gnus-util.el (gnus-string-prefix-p): New function, an alias to
	string-prefix-p in Emacs >=23.2.

	* nnmaildir.el (nnmaildir--ensure-suffix, nnmaildir--add-flag)